--- a/index.html
+++ b/index.html
@@ -55,17 +55,16 @@
 </head>
 <body class="antialiased">
 
-    <nav class="fixed w-full z-50 px-4 py-3">
-        <div class="max-w-7xl mx-auto glass-card rounded-2xl px-4 md:px-6 py-3 flex justify-between items-center">
-            <div class="flex items-center gap-3">
-                <img src="logo.png" alt="Logo" class="w-8 h-8 object-contain">
-                <div class="flex flex-col">
-                    <span class="font-title text-sm md:text-base font-bold tracking-tighter text-white">CONTROLE DE <span class="text-blue-500">PATRIMÔNIO</span></span>
-                    <span class="text-[9px] uppercase tracking-[0.3em] text-blue-400 font-bold italic">Help Tec Soluções</span>
+    <nav class="fixed w-full z-50 px-2 md:px-4 py-3">
+        <div class="max-w-7xl mx-auto glass-card rounded-2xl px-3 md:px-6 py-3 flex justify-between items-center gap-2">
+            <div class="flex items-center gap-2 md:gap-3 min-w-0">
+                <img src="logo.png" alt="Logo" class="w-7 h-7 md:w-8 md:h-8 object-contain shrink-0">
+                <div class="flex flex-col truncate">
+                    <span class="font-title text-[10px] md:text-base font-bold tracking-tighter text-white truncate uppercase">PATRIMÔNIO <span class="text-blue-500">FÁCIL</span></span>
+                    <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-400 font-bold italic">Help Tec</span>
                 </div>
             </div>
-            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-5 py-2 rounded-xl font-bold text-[10px] md:text-xs uppercase tracking-widest">
-                COMPRAR AGORA
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-3 md:px-5 py-2 rounded-xl font-bold text-[9px] md:text-xs uppercase tracking-widest whitespace-nowrap shrink-0">COMPRAR <span class="hidden md:inline">AGORA</span> <i class="fas fa-shopping-cart ml-1 md:ml-2"></i>
             </a>
         </div>
     </nav>
