--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
                     <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-400 font-bold italic">Help Tec</span>
                 </div>
             </div>
-            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-3 md:px-5 py-2 rounded-xl font-bold text-[9px] md:text-xs uppercase tracking-widest whitespace-nowrap shrink-0 flex items-center gap-2">
-                COMPRAR <span class="hidden sm:inline">AGORA</span> <i class="fas fa-shopping-cart"></i>
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-3 md:px-5 py-2 rounded-xl font-bold text-[9px] md:text-xs uppercase tracking-widest whitespace-nowrap shrink-0">COMPRAR <span class="hidden md:inline">AGORA</span> <i class="fas fa-shopping-cart ml-1 md:ml-2"></i>
             </a>
         </div>
     </nav>
@@ -143,17 +142,110 @@
                 </div>
             </div>
         </div>
+        <p class="text-center text-slate-500 text-[10px] mt-4 uppercase tracking-[0.2em] font-bold italic underline">Clique nos itens acima para saber mais</p>
     </section>
 
-    <footer class="py-16 bg-black border-t border-white/5 px-6 mb-12 sm:mb-0">
+    <section class="py-20 px-6 bg-[#080808]">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-center font-title text-2xl md:text-4xl text-white mb-12 uppercase italic">QUEM USA, <span class="text-blue-500">APROVA</span></h2>
+            <div class="grid md:grid-cols-3 gap-6">
+                <div class="glass-card p-6 rounded-2xl">
+                    <div class="flex text-yellow-500 mb-4"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    <p class="text-slate-300 italic text-sm">"Implementamos na nossa secretaria e a organização mudou 100%. O QR Code facilita muito o inventário."</p>
+                    <p class="text-blue-500 font-bold mt-4 text-xs uppercase tracking-widest">— Secretaria Administrativa</p>
+                </div>
+                <div class="glass-card p-6 rounded-2xl border-blue-500/30">
+                    <div class="flex text-yellow-500 mb-4"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    <p class="text-slate-300 italic text-sm">"Não entendo de TI e consegui usar de primeira. É muito intuitivo e gera etiquetas perfeitas."</p>
+                    <p class="text-blue-500 font-bold mt-4 text-xs uppercase tracking-widest">— Gestor de Patrimônio</p>
+                </div>
+                <div class="glass-card p-6 rounded-2xl">
+                    <div class="flex text-yellow-500 mb-4"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                    <p class="text-slate-300 italic text-sm">"O melhor investimento. Sem mensalidade e suporte nota 10. Recomendo para todas as empresas."</p>
+                    <p class="text-blue-500 font-bold mt-4 text-xs uppercase tracking-widest">— Empresário Local</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-20 px-6">
+        <div class="max-w-7xl mx-auto">
+            <h2 class="text-3xl md:text-5xl font-title font-bold text-white italic uppercase tracking-tighter text-center mb-16">TECNOLOGIA QUE <span class="text-blue-500">FACILITA O TRABALHO</span></h2>
+            <div class="grid md:grid-cols-2 gap-16 items-center">
+                <div class="space-y-6">
+                    <div class="glass-card p-6 rounded-2xl">
+                        <h4 class="font-title text-blue-500 mb-2 uppercase">Entrada e Saída</h4>
+                        <p class="text-slate-400 text-sm">Saiba exatamente quem retirou um item e quando ele foi devolvido. Evite perdas de patrimônio.</p>
+                    </div>
+                    <img src="TELA PATRIMONIO NOVO .png" class="img-tech w-full" alt="Cadastro Novo">
+                    <img src="TELA SAIDA DE PARIMONIO.png" class="img-tech w-full" alt="Tela Saída">
+                </div>
+                <div class="space-y-6">
+                    <img src="TELA PATRIMONIO USADO.png" class="img-tech w-full" alt="Cadastro Usado">
+                    <div class="glass-card p-6 rounded-2xl border-l-4 border-blue-500">
+                        <h4 class="font-title text-blue-500 mb-2 uppercase">Economia de Tempo</h4>
+                        <p class="text-slate-400 text-sm">O que levava dias agora é feito em minutos com etiquetas inteligentes rastreáveis.</p>
+                    </div>
+                    <img src="RELATORIO.png" class="img-tech w-full" alt="Relatório PDF">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-20 px-6">
+        <div class="max-w-4xl mx-auto">
+            <h2 class="text-center font-title text-2xl md:text-4xl text-white mb-12 uppercase italic">DÚVIDAS <span class="text-blue-500">FREQUENTES</span></h2>
+            <div class="space-y-4">
+                <div class="glass-card p-6 rounded-2xl cursor-pointer" onclick="this.classList.toggle('card-active')">
+                    <div class="flex justify-between items-center font-bold text-white uppercase tracking-tighter">
+                        <span>Preciso de internet para usar?</span>
+                        <i class="fas fa-plus text-blue-500"></i>
+                    </div>
+                    <div class="info-desc">Não. O sistema funciona de forma offline no seu computador, garantindo que você tenha acesso aos dados mesmo sem conexão.</div>
+                </div>
+                <div class="glass-card p-6 rounded-2xl cursor-pointer" onclick="this.classList.toggle('card-active')">
+                    <div class="flex justify-between items-center font-bold text-white uppercase tracking-tighter">
+                        <span>O pagamento é mensal?</span>
+                        <i class="fas fa-plus text-blue-500"></i>
+                    </div>
+                    <div class="info-desc">Não! O pagamento é único. Você compra a licença vitalícia e usa para sempre sem cobranças recorrentes.</div>
+                </div>
+                <div class="glass-card p-6 rounded-2xl cursor-pointer" onclick="this.classList.toggle('card-active')">
+                    <div class="flex justify-between items-center font-bold text-white uppercase tracking-tighter">
+                        <span>Funciona em qualquer computador?</span>
+                        <i class="fas fa-plus text-blue-500"></i>
+                    </div>
+                    <div class="info-desc">Sim, o sistema é leve e compatível com Windows. Não exige máquinas potentes para funcionar com rapidez.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 px-6 text-center">
+        <div class="max-w-2xl mx-auto glass-card p-10 md:p-16 rounded-[3rem] border-blue-500/30">
+            <h2 class="text-3xl md:text-5xl font-title font-bold mb-4 text-white uppercase italic tracking-tighter">O MELHOR <span class="text-blue-500">INVESTIMENTO</span></h2>
+            <div class="flex flex-col items-center mb-8">
+                <span class="text-slate-500 line-through text-xl">R$ 299,90</span>
+                <span class="text-7xl md:text-8xl font-title font-bold text-white tracking-tighter">R$ 149,90</span>
+                <p class="text-blue-400 font-bold uppercase tracking-widest mt-2">Pagamento Único • Sem Mensalidade</p>
+            </div>
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient w-full py-6 rounded-2xl text-2xl font-title font-bold text-white uppercase italic">
+                COMPRAR AGORA <i class="fas fa-lock ml-2"></i>
+            </a>
+        </div>
+    </section>
+
+    <footer class="py-16 bg-black border-t border-white/5 px-6">
         <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-12 items-center text-center md:text-left">
             <div>
                 <img src="logo.png" class="w-10 h-10 mx-auto md:mx-0 mb-4">
-                <p class="text-slate-500 text-xs font-bold uppercase tracking-widest leading-loose">
-                    Desenvolvido por Leandro Souza<br>
-                    © 2026 Help Tec Soluções Inteligentes
+                <p class="text-slate-500 text-[10px] font-bold uppercase tracking-[0.2em] leading-loose italic">
+                    Desenvolvido por Leandro Souza <br>
+                    © 2026 Help Tec Soluções Inteligentes <br>
+                    Todos os direitos reservados
                 </p>
             </div>
+            
             <div class="flex flex-col gap-3 items-center">
                 <h5 class="text-blue-500 font-bold uppercase text-[10px] tracking-widest mb-2">Links Oficiais</h5>
                 <div class="flex gap-6 text-xl">
@@ -162,18 +254,14 @@
                     <a href="https://wa.me/5547988647259" target="_blank" class="text-slate-400 hover:text-green-500"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
+
             <div class="flex flex-col gap-2 items-center md:items-end">
                 <h5 class="text-blue-500 font-bold uppercase text-[10px] tracking-widest mb-2">Suporte Técnico</h5>
                 <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-400 text-sm hover:text-blue-400 transition-colors underline">leandro.souza22oliveira@gmail.com</a>
+                <p class="text-slate-600 text-[9px] mt-2 italic uppercase">Atendimento Seg-Sex 2026</p>
             </div>
         </div>
     </footer>
-
-    <div class="sm:hidden fixed bottom-0 left-0 w-full bg-black/90 backdrop-blur-md py-2 border-t border-white/10 text-center z-40">
-        <p class="text-[8px] text-slate-500 uppercase tracking-widest font-bold">
-            © 2026 Help Tec Soluções Inteligentes - Todos os direitos reservados
-        </p>
-    </div>
 
 </body>
 </html>
