--- a/index.html
+++ b/index.html
@@ -221,47 +221,52 @@
         </div>
     </section>
 
-    <section class="py-24 px-6 text-center">
-        <div class="max-w-2xl mx-auto glass-card p-10 md:p-16 rounded-[3rem] border-blue-500/30">
-            <h2 class="text-3xl md:text-5xl font-title font-bold mb-4 text-white uppercase italic tracking-tighter">O MELHOR <span class="text-blue-500">INVESTIMENTO</span></h2>
+    <section class="py-12 md:py-24 px-4 md:px-6 text-center">
+        <div class="max-w-2xl mx-auto glass-card p-8 md:p-16 rounded-[2rem] md:rounded-[3rem] border-blue-500/30">
+            <h2 class="text-2xl md:text-5xl font-title font-bold mb-4 text-white uppercase italic tracking-tighter">
+                O MELHOR <span class="text-blue-500">INVESTIMENTO</span>
+            </h2>
             <div class="flex flex-col items-center mb-8">
-                <span class="text-slate-500 line-through text-xl">R$ 299,90</span>
-                <span class="text-7xl md:text-8xl font-title font-bold text-white tracking-tighter">R$ 149,90</span>
-                <p class="text-blue-400 font-bold uppercase tracking-widest mt-2">Pagamento Único • Sem Mensalidade</p>
+                <span class="text-slate-500 line-through text-lg md:text-xl">R$ 299,90</span>
+                <span class="text-5xl md:text-8xl font-title font-bold text-white tracking-tighter">R$ 149,90</span>
+                <p class="text-blue-400 text-xs md:text-base font-bold uppercase tracking-widest mt-2">Pagamento Único • Sem Mensalidade</p>
             </div>
-            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient w-full py-6 rounded-2xl text-2xl font-title font-bold text-white uppercase italic">
-                COMPRAR AGORA <i class="fas fa-lock ml-2"></i>
+            <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient w-full py-5 md:py-6 rounded-2xl text-lg md:text-2xl font-title font-bold text-white uppercase italic flex items-center justify-center gap-3">
+                COMPRAR AGORA <i class="fas fa-lock"></i>
             </a>
         </div>
     </section>
 
-    <footer class="py-16 bg-black border-t border-white/5 px-6">
-        <div class="max-w-7xl mx-auto grid md:grid-cols-3 gap-12 items-center text-center md:text-left">
-            <div>
-                <img src="logo.png" class="w-10 h-10 mx-auto md:mx-0 mb-4">
-                <p class="text-slate-500 text-[10px] font-bold uppercase tracking-[0.2em] leading-loose italic">
-                    Desenvolvido por Leandro Souza <br>
-                    © 2026 Help Tec Soluções Inteligentes <br>
-                    Todos os direitos reservados
-                </p>
-            </div>
+    <footer class="py-12 bg-black border-t border-white/5 px-6">
+        <div class="max-w-7xl mx-auto flex flex-col md:grid md:grid-cols-3 gap-10 items-center text-center">
             
-            <div class="flex flex-col gap-3 items-center">
+            <div class="flex flex-col gap-2 items-center md:items-start order-1">
+                <h5 class="text-blue-500 font-bold uppercase text-[10px] tracking-widest mb-2">Suporte Técnico</h5>
+                <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-400 text-sm hover:text-blue-400 transition-colors underline break-all">
+                    leandro.souza22oliveira@gmail.com
+                </a>
+                <p class="text-slate-600 text-[9px] mt-2 italic uppercase">Atendimento Seg-Sex 2026</p>
+            </div>
+
+            <div class="flex flex-col gap-3 items-center order-2">
                 <h5 class="text-blue-500 font-bold uppercase text-[10px] tracking-widest mb-2">Links Oficiais</h5>
-                <div class="flex gap-6 text-xl">
+                <div class="flex gap-6 text-2xl">
                     <a href="https://www.instagram.com/_leosouuzaa/" target="_blank" class="text-slate-400 hover:text-white"><i class="fab fa-instagram"></i></a>
                     <a href="https://github.com/leosouzaaa" target="_blank" class="text-slate-400 hover:text-white"><i class="fab fa-github"></i></a>
                     <a href="https://wa.me/5547988647259" target="_blank" class="text-slate-400 hover:text-green-500"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
 
-            <div class="flex flex-col gap-2 items-center md:items-end">
-                <h5 class="text-blue-500 font-bold uppercase text-[10px] tracking-widest mb-2">Suporte Técnico</h5>
-                <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-400 text-sm hover:text-blue-400 transition-colors underline">leandro.souza22oliveira@gmail.com</a>
-                <p class="text-slate-600 text-[9px] mt-2 italic uppercase">Atendimento Seg-Sex 2026</p>
+            <div class="flex flex-col items-center md:items-end order-3">
+                <img src="logo.png" class="w-10 h-10 mb-4">
+                <p class="text-slate-500 text-[10px] font-bold uppercase tracking-[0.2em] leading-loose italic md:text-right">
+                    Desenvolvido por Leandro Souza <br>
+                    © 2026 Help Tec Soluções Inteligentes <br>
+                    Todos os direitos reservados
+                </p>
             </div>
+            
         </div>
     </footer>
-
 </body>
 </html>
