--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SISTEMA PATRIMÔNIO FÁCIL | Help Tec</title>
+    <title>SISTEMA CONTROLE DE PATRIMÔNIO PRO | Help Tec</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Rajdhani:wght@400;600;700&display=swap" rel="stylesheet">
@@ -59,8 +59,8 @@
             <div class="flex items-center gap-2 md:gap-3 min-w-0">
                 <img src="logo.png" alt="Logo" class="w-7 h-7 md:w-8 md:h-8 object-contain shrink-0">
                 <div class="flex flex-col truncate">
-                    <span class="font-title text-[10px] md:text-base font-bold tracking-tighter text-white truncate uppercase">PATRIMÔNIO <span class="text-blue-500">FÁCIL</span></span>
-                    <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-400 font-bold italic">Help Tec</span>
+                    <span class="font-title text-[10px] md:text-base font-bold tracking-tighter text-white truncate uppercase">SISTEMA CONTROLE DE PATRIMÔNIO <span class="text-blue-500">PRO</span></span>
+                    <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-400 font-bold italic">HHelp Tec Soluções Inteligentes ©</span>
                 </div>
             </div>
             <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-3 md:px-5 py-2 rounded-xl font-bold text-[9px] md:text-xs uppercase tracking-widest whitespace-nowrap shrink-0">COMPRAR <span class="hidden md:inline">AGORA</span> <i class="fas fa-shopping-cart ml-1 md:ml-2"></i>
@@ -245,7 +245,7 @@
                 <a href="mailto:leandro.souza22oliveira@gmail.com" class="text-slate-400 text-sm hover:text-blue-400 transition-colors underline break-all">
                     leandro.souza22oliveira@gmail.com
                 </a>
-                <p class="text-slate-600 text-[9px] mt-2 italic uppercase">Atendimento Seg-Sex 2026</p>
+                <p class="text-slate-600 text-[9px] mt-2 italic uppercase">Atendimento Seg-Sex</p>
             </div>
 
             <div class="flex flex-col gap-3 items-center order-2">
@@ -261,8 +261,8 @@
                 <img src="logo.png" class="w-10 h-10 mb-4">
                 <p class="text-slate-500 text-[10px] font-bold uppercase tracking-[0.2em] leading-loose italic md:text-right">
                     Desenvolvido por Leandro Souza <br>
-                    © 2026 Help Tec Soluções Inteligentes <br>
-                    Todos os direitos reservados
+                    Help Tec Soluções Inteligentes <br>
+                    Todos os direitos reservados © 2026
                 </p>
             </div>
             
