--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="logo.png" alt="Logo" class="w-7 h-7 md:w-8 md:h-8 object-contain shrink-0">
                 <div class="flex flex-col truncate">
                     <span class="font-title text-[10px] md:text-base font-bold tracking-tighter text-white truncate uppercase">SISTEMA CONTROLE DE PATRIMÔNIO <span class="text-blue-500">PRO</span></span>
-                    <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-400 font-bold italic">HHelp Tec Soluções Inteligentes ©</span>
+                    <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-400 font-bold italic">Help Tec Soluções Inteligentes ©</span>
                 </div>
             </div>
             <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-3 md:px-5 py-2 rounded-xl font-bold text-[9px] md:text-xs uppercase tracking-widest whitespace-nowrap shrink-0">COMPRAR <span class="hidden md:inline">AGORA</span> <i class="fas fa-shopping-cart ml-1 md:ml-2"></i>
@@ -95,6 +95,34 @@
             </div>
             <div class="relative group">
                 <img src="painel.png" class="img-tech shadow-2xl group-hover:shadow-blue-500/20" alt="Painel Principal">
+            </div>
+        </div>
+    </section>
+
+    <section class="py-16 px-6">
+        <div class="max-w-7xl mx-auto glass-card p-8 md:p-12 rounded-[2.5rem] border-blue-500/20 relative overflow-hidden">
+            <div class="absolute -right-10 -top-10 w-40 h-40 bg-blue-600/10 blur-3xl rounded-full"></div>
+            <div class="grid md:grid-cols-2 gap-10 items-center">
+                <div class="order-2 md:order-1">
+                    <h2 class="text-3xl md:text-5xl font-title font-bold text-white uppercase italic mb-6">SISTEMA SEMPRE <span class="text-blue-500">EVOLUINDO</span></h2>
+                    <p class="text-slate-300 text-lg leading-relaxed mb-6">
+                        Ao adquirir a licença PRO, você garante acesso vitalício a todas as **novas atualizações e melhorias tecnológicas**. Nosso compromisso é manter o sistema sempre rápido, seguro e atualizado com as novas necessidades do mercado.
+                    </p>
+                    <div class="flex items-center gap-4 bg-blue-600/10 p-4 rounded-xl border border-blue-500/30">
+                        <i class="fas fa-sync-alt text-3xl text-blue-400 animate-spin-slow"></i>
+                        <div>
+                            <p class="text-white font-bold uppercase text-sm">Atualizações 100% Gratuitas</p>
+                            <p class="text-slate-400 text-xs">Novos recursos sem custo adicional para clientes PRO.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="order-1 md:order-2 flex justify-center">
+                    <i class="fas fa-rocket text-[120px] md:text-[200px] text-blue-500/20 absolute opacity-30 md:static md:opacity-100"></i>
+                    <div class="hidden md:block glass-card p-6 rounded-2xl border-blue-500/40 text-center">
+                        <span class="text-blue-400 font-bold block mb-2 uppercase tracking-widest text-xs">Versão Atual</span>
+                        <span class="text-white text-3xl font-title font-bold italic">v2.0 PRO</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
