--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <img src="logo.png" alt="Logo" class="w-7 h-7 md:w-8 md:h-8 object-contain shrink-0">
                 <div class="flex flex-col truncate">
                     <span class="font-title text-[8px] md:text-base font-bold tracking-tighter text-white truncate uppercase">SISTEMA CONTROLE DE PATRIMÔNIO <span class="text-blue-420">PRO</span></span>
-                    <span class="text-[6px] md:text-[8px] uppercase tracking-[0.2em] text-blue-380 font-bold italic">Help Tec Soluções Inteligentes ©</span>
+                    <span class="text-[7px] md:text-[9px] uppercase tracking-[0.2em] text-blue-380 font-bold italic">Help Tec Soluções Inteligentes ©</span>
                 </div>
             </div>
             <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient text-white px-3 md:px-5 py-2 rounded-xl font-bold text-[9px] md:text-xs uppercase tracking-widest whitespace-nowrap shrink-0">COMPRAR <span class="hidden md:inline">AGORA</span> <i class="fas fa-shopping-cart ml-1 md:ml-2"></i>
@@ -90,7 +90,7 @@
                 </div>
 
                 <a href="https://pay.hotmart.com/W104049568D" target="_blank" class="btn-gradient w-full md:w-auto px-12 py-5 rounded-2xl text-xl font-title font-bold text-white uppercase italic shadow-2xl inline-flex items-center justify-center gap-3">
-                    GARANTIR MINHA LICENÇA <i class="fas fa-arrow-right"></i>
+                    GARANTIR MINHA LICENÇA PRO <i class="fas fa-arrow-right"></i>
                 </a>
             </div>
             <div class="relative group">
@@ -106,7 +106,7 @@
                 <div class="order-2 md:order-1">
                     <h2 class="text-3xl md:text-5xl font-title font-bold text-white uppercase italic mb-6">SISTEMA SEMPRE <span class="text-blue-500">EVOLUINDO</span></h2>
                     <p class="text-slate-300 text-lg leading-relaxed mb-6">
-                        Ao adquirir a licença PRO, você garante acesso vitalício a todas as **novas atualizações e melhorias tecnológicas**. Nosso compromisso é manter o sistema sempre rápido, seguro e atualizado com as novas necessidades do mercado.
+                        Ao adquirir a licença PRO, você garante acesso vitalício a todas as novas atualizações e melhorias tecnológicas Nosso compromisso é manter o sistema sempre rápido, seguro e atualizado com as novas necessidades do mercado.
                     </p>
                     <div class="flex items-center gap-4 bg-blue-600/10 p-4 rounded-xl border border-blue-500/30">
                         <i class="fas fa-sync-alt text-3xl text-blue-400 animate-spin-slow"></i>
