--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <i class="fas fa-rocket text-[120px] md:text-[200px] text-blue-500/20 absolute opacity-30 md:static md:opacity-100"></i>
                     <div class="hidden md:block glass-card p-6 rounded-2xl border-blue-500/40 text-center">
                         <span class="text-blue-400 font-bold block mb-2 uppercase tracking-widest text-xs">Versão Atual</span>
-                        <span class="text-white text-3xl font-title font-bold italic">v2.0 PRO</span>
+                        <span class="text-white text-3xl font-title font-bold italic">v1. PRO</span>
                     </div>
                 </div>
             </div>
